spring-rest-hello-world/openshift/cluster-claro/01.deploymentconfig-claro-mock-service-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: claro-mock-service-dc
  namespace: 3scale-project
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/3scale-project/deploymentconfigs/claro-mock-service-dc
  uid: fcbd970d-99c7-4be2-ad4f-afca15a19e04
  resourceVersion: '250754915'
  generation: 3
  creationTimestamp: '2020-09-08T13:07:42Z'
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: claro-mock-service
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: claro-mock-service
    spec:
      containers:
        - name: claro-mock-service
          image: >-
            image-registry.openshift-image-registry.svc:5000/3scale-project/claro-mock-service:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 3
  details:
    message: config change
    causes:
      - type: ConfigChange
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 3
  updatedReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-09-08T13:17:06Z'
      lastTransitionTime: '2020-09-08T13:17:06Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-09-08T13:17:07Z'
      lastTransitionTime: '2020-09-08T13:16:51Z'
      reason: NewReplicationControllerAvailable
      message: replication controller "claro-mock-service-dc-3" successfully rolled out
  replicas: 1
  readyReplicas: 1
